feat: change submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "obsidian"]
 	path = obsidian
-	url = https://git.vio.vin/violet/obsidian.git
+	url = https://github.com/xkdvSrPD/obsidian.git
