--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "sharp": "^0.34.3"
   }
 }
